<resources>
    <string name="app_name">My Book List</string>
    <string name="action_settings">Settings</string>
    <string name="hide_action_bar">Hide</string>
    <string name="title_activity_book_details">Book Details</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <string-array name="navDrawerItems">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
        <item>Item 7</item>
    </string-array>

    <string name="title_activity_add_book">Add New Book</string>
    <string name="enter_book_title">Enter Book Title</string>
    <string name="enter_author_name">Enter Author</string>
    <string name="enter_current_page">Enter Current Page</string>
    <string name="enter_total_number_of_pages">Enter Total Number of Pages</string>
    <string name="enter_the_isbn">Enter the ISBN</string>
    <string name="place_holder_text">Place Holder Text</string>
    <string name="title">Title:</string>
    <string name="author">Author:</string>
    <string name="page">Page :</string>
    <string name="pages">Pages:</string>
    <string name="isbn">ISBN :</string>
</resources>
