<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_book_details"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#19beb788"
    tools:context="com.davidhernandez.mybooklist.BookDetailsFragment"
    tools:showIn="@layout/activity_book_details">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/title"
            android:id="@+id/textView_Book_Prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp"
            android:textStyle="normal|bold"/>

        <TextView
            android:text="@string/place_holder_text"
            android:id="@+id/textView_Book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp"
            android:layout_marginLeft="32dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/author"
            android:id="@+id/textView_Author_Prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="normal|bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:text="@string/place_holder_text"
            android:id="@+id/textView_Author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:fontFamily="sans-serif"
            android:layout_marginLeft="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/page"
            android:id="@+id/textView_CurrPage_Prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="22sp"
            android:textStyle="normal|bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:text="@string/place_holder_text"
            android:id="@+id/textView_CurrPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginLeft="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/pages"
            android:id="@+id/textView_Pages_Prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="normal|bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:text="@string/place_holder_text"
            android:id="@+id/textView_Pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginLeft="11dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/isbn"
            android:id="@+id/textView_ISBN_Prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="normal|bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:text="@string/place_holder_text"
            android:id="@+id/textView_ISBN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginLeft="11dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    </LinearLayout>
</LinearLayout>
